--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,7 +10,7 @@ body {
 	font-family: 'Fira mono', sans-serif;
 	height: 100vh;
 	width: 100vw;
-	background-image: linear-gradient(0deg, rgb(0, 0, 0), rgb(0, 222, 215), rgb(0, 0, 0));
+	background-image: linear-gradient(0deg, rgb(0, 0, 0), rgb(0, 222, 215), rgb(0, 0, 0)) no-repeat;
 	display: flex;
 	justify-items: center;
 	align-items: center;
@@ -18,12 +18,11 @@ body {
 }
 
 header {
-	color: white;
+	color: rgb(160, 150, 150);
 	margin: 20px;
 }
 
 header h1 {
-	text-decoration: underline;
 	margin-bottom: 2px;
 	font-size: 3em;
 }
@@ -42,9 +41,12 @@ header p {
 }
 
 #display {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1em;
-	color: gray;
+	font-family: "fira mono", sans-serif;
+	font-size: 1.4em;
+	color: white;
+	background-image: linear-gradient(10deg, rgb(26, 26, 26), rgb(54, 65, 65));
+	padding-left: 25px;
+	border: none;
 }
 
 #display {
@@ -53,16 +55,33 @@ header p {
 }
 
 button {
-	background-image: linear-gradient(90deg, rgb(45, 240, 191), rgb(14, 209, 157));
-	color: white;
-	font-size: 0.8em;
-	border-radius: 5%;
+	font-family: "fira mono", sans-serif;
+	background-image: linear-gradient(0deg, rgb(198, 245, 234), rgb(166, 239, 240));
+	color: black;
+	font-size: 1.2em;
+	font-weight: 500;
+	border-radius: .1em;
 	outline: none;
 	border: none;
+}
+button:hover {
+	transform: translate(1.1);
+}
+
+#equals {
+	background-image: linear-gradient(0deg, rgb(45, 240, 139), rgb(14, 209, 164));
+}
+
+#muliplicate,
+#minus,
+#divide,
+#plus {
+	background-image: linear-gradient(0deg, rgb(240, 162, 45), rgb(209, 147, 14));
 }
 
 #clear {
 	grid-column: 1/4;
+	background-image: linear-gradient(0deg, rgb(240, 45, 126), rgb(209, 14, 128));
 }
 
 #zero {
